--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,12 +4,17 @@
 		"target": "ES2022",
 		"outDir": "out",
 		"lib": [
-			"ES2022"
+			"ES2022",
+			"DOM"
 		],
 		"sourceMap": true,
 		"rootDir": "src",
 		"strict": true,   /* enable all strict type-checking options */
-		/* Additional Checks */
+		"jsx": "react-jsx",
+		"allowImportingTsExtensions": true,
+		"emitDeclarationOnly": true,
+		"composite": true
+		/* Additional Checks rue*/
 		// "noImplicitReturns": true, /* Report error when not all code paths in function return a value. */
 		// "noFallthroughCasesInSwitch": true, /* Report errors for fallthrough cases in switch statement. */
 		// "noUnusedParameters": true,  /* Report errors on unused parameters. */
