--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,13 +10,13 @@
 		"sourceMap": true,
 		"rootDir": "src",
 		"strict": true,   /* enable all strict type-checking options */
-		"jsx": "react-jsx",
-		"allowImportingTsExtensions": true,
-		"emitDeclarationOnly": true,
-		"composite": true
 		/* Additional Checks rue*/
 		// "noImplicitReturns": true, /* Report error when not all code paths in function return a value. */
 		// "noFallthroughCasesInSwitch": true, /* Report errors for fallthrough cases in switch statement. */
 		// "noUnusedParameters": true,  /* Report errors on unused parameters. */
-	}
+
+	},
+	"exclude": [
+		"web-view"
+	]
 }
