--- a/web-view/package.json
+++ b/web-view/package.json
@@ -14,6 +14,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^6.29.0",
+    "rxjs": "^7.8.2",
     "sass": "^1.85.1"
   },
   "devDependencies": {
